Created local_env.yml, changed application.rb in config

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,17 +17,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: localhost
-  port: 5432
-  username: postgres
-  password: loofer
+  username: <%= ENV["APP_USERNAME"] %>
+  password: <%= ENV["APP_PASSWORD"] %>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: Book_an_Appointment_development
+  database: book_an_appointment_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -61,7 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: Book_an_Appointment_test
+  database: book_an_appointment_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
