--- a/config/database.yml
+++ b/config/database.yml
@@ -85,6 +85,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
   database: Book_an_Appointment_production
   username: Book_an_Appointment
   password: <%= ENV["BOOK_AN_APPOINTMENT_DATABASE_PASSWORD"] %>
